# bgslibrary

./: .gitignore  AdaptiveBackgroundLearning.cpp  AdaptiveBackgroundLearning.h  CMakeLists.txt  Config.h  DPAdaptiveMedianBGS.h  DPEigenbackgroundBGS.h  DPGrimsonGMMBGS.h  DPMeanBGS.h  DPPratiMediodBGS.h  DPWrenGABGS.h  DPZivkovicAGMMBGS.h  Demo.cpp  FrameDifferenceBGS.h  FrameProcessor.cpp  FrameProcessor.h  IFrameProcessor.h  LICENSE.txt  Main.cpp  MixtureOfGaussianV1BGS.h  MixtureOfGaussianV2BGS.h  PostProcessor.cpp  PostProcessor.h  PreProcessor.cpp  PreProcessor.h  README.txt  StaticFrameDifferenceBGS.cpp  StaticFrameDifferenceBGS.h  T2FGMM.cpp  T2FGMM.h  T2FGMM_UM.h  T2FGMM_UV.h  VideoAnalysis.cpp  VideoAnalysis.h  VideoCapture.cpp  VideoCapture.h  WeightedMovingMeanBGS.h  WeightedMovingVarianceBGS.h  bgslibrary_vs2010_opencv243.txt  project.sln  (+3 more)
config/: FrameProcessor.xml
package_bgs/ae/: KDE.h  NPBGSubtractor.cpp  NPBGSubtractor.h
package_bgs/av/: TBackground.cpp  TBackgroundVuMeter.cpp  VuMeter.cpp  VuMeter.h
package_bgs/ck/: block.h
package_bgs/dp/: AdaptiveMedianBGS.h  Bgs.h  BgsParams.h  Blob.cpp  Blob.h  BlobExtraction.cpp  BlobExtraction.h  BlobResult.cpp  BlobResult.h  ConnectedComponents.cpp  ConnectedComponents.h  Eigenbackground.cpp  Eigenbackground.h  GrimsonGMM.cpp  GrimsonGMM.h  Image.h  MeanBGS.h  PratiMediodBGS.cpp  PratiMediodBGS.h  WrenGA.cpp  WrenGA.h  ZivkovicAGMM.cpp  ZivkovicAGMM.h
package_bgs/jmo/: BlobExtraction.cpp  BlobExtraction.h  BlobResult.cpp  blob.cpp  (+6 more)
vs2010/: bgslibrary.sln  bgslibrary.vcxproj  bgslibrary.vcxproj.filters
(+24 files in other folders)
